--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "SuperHeroApp"
 include ':app'
+include ':presentation'
+include ':domain'
+include ':data'
