--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0'
     implementation project(path: ':domain')
     implementation project(path: ':data')
